Fix page header content alignement

--- a/src/components/Page/page.scss
+++ b/src/components/Page/page.scss
@@ -4,6 +4,8 @@
 }
 
 .page-header {
+  @apply max-w-prose mx-auto;
+  @apply lg:text-lg;
 }
 
 .page-header-title {
